# Berkeley-Humanoid-Lite

./: README.md
Berkeley-Humanoid-Lite-Lowlevel/: calibration_left.yaml  pyproject.toml
Berkeley-Humanoid-Lite-Lowlevel/berkeley_humanoid_lite_lowlevel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Berkeley-Humanoid-Lite-Lowlevel/berkeley_humanoid_lite_lowlevel/robot/: left_leg.py
Berkeley-Humanoid-Lite-Lowlevel/scripts/: left_calibrate.py
